--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
             </ul>
         </nav>
     </header>
-
     <section id="main-banner">
         <h2>Bienvenidos a la web de BLACKPINK</h2>
         <p>Descubre todo sobre el grupo de K-pop más famoso del mundo: sus miembros, su música y su historia.</p>
@@ -28,21 +27,23 @@
 
     <section class="biography-section">
         <h2>Sobre BLACKPINK</h2>
-        <p>BLACKPINK es un grupo de K-pop formado por Jisoo, Jennie, Rosé y Lisa. Debutaron en 2016 bajo YG Entertainment y rápidamente se convirtieron en un fenómeno mundial.</p>
-        <p>Conocidas por su estilo único y poderosa presencia en el escenario, BLACKPINK ha conquistado las listas de éxitos y ha acumulado millones de seguidores en todo el mundo.</p>
+        <p>BLACKPINK es un grupo de K-pop formado por <strong>Jisoo, Jennie, Rosé y Lisa</strong>. Debutaron el 8 de agosto de 2016 bajo YG Entertainment con el single álbum <em>Square One</em>, que incluye los éxitos "BOOMBAYAH" y "WHISTLE".</p>
+        <p>El grupo ha alcanzado múltiples récords en YouTube, Billboard y otros rankings globales. BLACKPINK se ha convertido en el primer grupo femenino de K-pop en encabezar el <strong>Coachella</strong> y realizar giras mundiales con estadios completamente vendidos.</p>
+        <p>BLACKPINK es conocido por su <strong>concepto poderoso y sofisticado</strong>, combinando el estilo "Black" (fuerte y feroz) con el "Pink" (elegante y femenino).</p>
     </section>
 
-    <section class="news-section">
-        <h2>Últimas Noticias</h2>
-        <article class="news-item">
-            <h3>BLACKPINK en Coachella 2025</h3>
-            <p>BLACKPINK ha sido confirmado como uno de los artistas principales en Coachella 2025. ¡No te lo pierdas!</p>
-        </article>
-        <article class="news-item">
-            <h3>Nueva Música en Camino</h3>
-            <p>El grupo ha anunciado que están trabajando en su próximo álbum. ¡Blinks, estén atentos!</p>
-        </article>
+
+    <section class="achievements">
+        <h2>🏆 Logros Destacados</h2>
+        <ul>
+            <li>Primer grupo femenino de K-pop en actuar en <strong>Coachella</strong> (2019 y 2023).</li>
+            <li>Grupo de K-pop con <strong>más suscriptores en YouTube</strong> (90M+).</li>
+            <li>Canción de K-pop más vista en 24 horas: <strong>"How You Like That"</strong> (86.3M vistas).</li>
+            <li>Primer grupo de K-pop en alcanzar el #1 en <strong>Billboard Global 200</strong>.</li>
+            <li>Gira mundial <strong>"Born Pink World Tour"</strong>, la más taquillera para un grupo femenino.</li>
+        </ul>
     </section>
+
     <section class="social-media">
         <h2>Síguenos en Redes Sociales</h2>
         <ul>
@@ -51,9 +52,7 @@
             <li><a href="https://www.youtube.com/c/BLACKPINK" target="_blank">YouTube</a></li>
         </ul>
     </section>
-    <footer id="footer">
-        <p>&copy; 2025 BLACKPINK Fanpage - No oficial</p>
-    </footer>
+
    
 </body>
 </html>
