--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="paginas/miembros.html">Miembros</a></li>
                 <li><a href="paginas/hits.html">Hits</a></li>
-                <li><a href="paginas/galeria.html">Galería</a></li>
+                <li><a href="paginas/premios.html">Premios</a></li>
                 <li><a href="paginas/conciertos.html">Conciertos</a></li>
             </ul>
         </nav>
@@ -55,12 +55,6 @@
             <li><a href="https://twitter.com/BLACKPINK" target="_blank">Twitter</a></li>
             <li><a href="https://www.youtube.com/c/BLACKPINK" target="_blank">YouTube</a></li>
         </ul>
-    </section>
-    
-    <footer id="footer">
-        <p>&copy; 2025 BLACKPINK Fanpage - No oficial</p>
-    </footer>
-    
-   
+    </section>  
 </body>
 </html>
