--- a/paginas/hits.html
+++ b/paginas/hits.html
@@ -14,7 +14,7 @@
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="miembros.html">Miembros</a></li>
                 <li><a href="hits.html">Hits</a></li>
-                <li><a href="galeria.html">Galería</a></li>
+                <li><a href="premios.html">Premios</a></li>
                 <li><a href="conciertos.html">Conciertos</a></li>
             </ul>
         </nav>
@@ -64,6 +64,11 @@
                     <a href="https://www.youtube.com/watch?v=b73BI9eUkjM" target="_blank" class="btn">Ver en YouTube</a>
                 </div>
                 <div class="hit-card">
+                    <img src="../imagenes/musica/LISA-ROCKSTAR.avif" alt="LISA - ROCKSTAR">
+                    <h4>LISA - ROCKSTAR</h4>
+                    <a href="https://www.youtube.com/watch?v=b73BI9eUkjM" target="_blank" class="btn">Ver en YouTube</a>
+                </div>
+                <div class="hit-card">
                     <img src="../imagenes/musica/lisa-money.jpg" alt="MONEY - Lisa">
                     <h4>Lisa - MONEY</h4>
                     <a href="https://www.youtube.com/watch?v=CKZvWhCqx1s" target="_blank" class="btn">Ver en YouTube</a>
@@ -75,13 +80,13 @@
             <h3>🤝 Colaboraciones</h3>
             <div class="hits-container">
                 <div class="hit-card">
-                    <img src="../imagenes/musica/newwoman.jpg" alt="New Woman - Lisa & Rosalía">
-                    <h4>Lisa & Rosalía - New Woman</h4>
+                    <img src="../imagenes/musica/sour-candy.jpg" alt="Lady Gaga, BLACKPINK - Sour Candy">
+                    <h4>Lady Gaga, BLACKPINK - Sour Candy</h4>
                     <a href="https://www.youtube.com/watch?v=UxXY_hR_wzo" target="_blank" class="btn">Ver en YouTube</a>
                 </div>
                 <div class="hit-card">
-                    <img src="../imagenes/musica/newwoman.jpg" alt="New Woman - Lisa & Rosalía">
-                    <h4>Lisa & Rosalía - New Woman</h4>
+                    <img src="../imagenes/musica/ice_cream.jpg" alt="BLACKPINK - 'Ice Cream (with Selena Gomez)'">
+                    <h4>BLACKPINK - 'Ice Cream (with Selena Gomez)'</h4>
                     <a href="https://www.youtube.com/watch?v=UxXY_hR_wzo" target="_blank" class="btn">Ver en YouTube</a>
                 </div>
                 <div class="hit-card">
