--- a/paginas/miembros.html
+++ b/paginas/miembros.html
@@ -14,7 +14,7 @@
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="miembros.html">Miembros</a></li>
                 <li><a href="hits.html">Hits</a></li>
-                <li><a href="galeria.html">Galería</a></li>
+                <li><a href="premios.html">Premios</a></li>
                 <li><a href="conciertos.html">Conciertos</a></li>
             </ul>
         </nav>
