--- a/paginas/premios.html
+++ b/paginas/premios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../estilos/galeria.css">
+    <link rel="stylesheet" href="../estilos/premios.css">
 </head>
 <body>
     <header>
@@ -14,7 +14,7 @@
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="miembros.html">Miembros</a></li>
                 <li><a href="hits.html">Hits</a></li>
-                <li><a href="galeria.html">Galería</a></li>
+                <li><a href="premios.html">Premios</a></li>
                 <li><a href="conciertos.html">Conciertos</a></li>
             </ul>
         </nav>
