--- a/paginas/miembros.html
+++ b/paginas/miembros.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miembros de BLACKPINK</title>
     <link rel="stylesheet" href="../estilos/miembros.css">
+    <link rel="icon" type="image/jpg" href="../imagenes/favicon/blackpinklogo.jpg"/>
 </head>
 <body>
     <header>
