--- a/paginas/hits.html
+++ b/paginas/hits.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hits de BLACKPINK</title>
     <link rel="stylesheet" href="../estilos/hits.css">
+    <link rel="icon" type="image/jpg" href="../imagenes/favicon/blackpinklogo.png"/>
 </head>
 <body>
     <header>
